<resources>
    <string name="upgrade_url">http://eu020.fra.samsungsocialhub.com/get/client/dl.do?clientId=</string>
    <string name="account_authenticators">yahoo,msn,work</string>
    <string name="default_external_log_folder">/data/log/z7logs</string>
    <string name="prefs_email_default_path_value">Attachments</string>
    <string name="attachment_close">Close profile</string>
    <string name="authDetails">Authentication Details</string>
    <string name="file_not_found">File not found</string>
    <string name="build_number">20080722-0001</string>
    <string name="about_page_lb_7tp_address">Tech Address:</string>
    <string name="about_page_lb_brand">Brand:</string>
    <string name="about_page_lb_build_date">Build Date:</string>
    <string name="about_page_lb_build_number">Build Number:</string>
    <string name="about_page_lb_version">Version:</string>
    <string name="account_type_page_lb_get_email_from">Choose service provider:</string>
    <string name="account_type_page_lb_select_service">Select address:</string>
    <string name="account_type_page_lb_text_other">Other Email</string>
    <string name="account_type_page_pt_account_type_title">Registration</string>
    <string name="available_services_lb_no_data">No available services</string>
    <string name="available_services_lb_text_isp">{0} provides my email account.</string>
    <string name="available_services_lb_text_menu_more">More about {0}</string>
    <string name="available_services_lb_text_more">My email account provider is not shown.</string>
    <string name="available_services_lb_text_owa">Outlook Web Access is enabled.</string>
    <string name="available_services_lb_text_work">My company provides my email account.</string>
    <string name="available_services_service_has_invitation">{0} has invitation.</string>
    <string name="battery_low_disconnect_notice_info">"Your battery's charge is low, so Social Hub is disconnecting to conserve power."</string>
    <string name="button_accept">Accept</string>
    <string name="button_accept_disclaimer">Accept</string>
    <string name="button_account_details_renew_subscription">Renew Subscription</string>
    <string name="button_agree">Agree</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_connect">Connect</string>
    <string name="button_decline">Decline</string>
    <string name="button_decline_disclaimer">Decline</string>
    <string name="button_details">Details</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_done">Done</string>
    <string name="button_finish">Finish</string>
    <string name="button_hide">Hide</string>
    <string name="button_later">Later</string>
    <string name="button_menu">Menu</string>
    <string name="button_next">Next</string>
    <string name="button_no">No</string>
    <string name="button_now">Now</string>
    <string name="button_ok">OK</string>
    <string name="button_pause">Pause</string>
    <string name="button_prev">Previous</string>
    <string name="button_remind_later">Remind Me Later</string>
    <string name="button_renew_now">Renew Now</string>
    <string name="button_restart_application">Restart Application</string>
    <string name="button_restart_device">Restart Device</string>
    <string name="button_resume">Resume</string>
    <string name="button_save">Save</string>
    <string name="button_save_for_later">Defer</string>
    <string name="button_search">Search</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_skip">Skip</string>
    <string name="button_stop">Stop</string>
    <string name="button_subscribe_now">Subscribe Now</string>
    <string name="button_subscription_checkout_done">Checkout</string>
    <string name="button_try_to_fix">Try to Fix</string>
    <string name="button_tryagain">Try Again</string>
    <string name="button_upgrade_now">Upgrade Now</string>
    <string name="button_view_disclaimer">Disclaimer</string>
    <string name="button_yes">Yes</string>
    <string name="calendar_config_page_bt_merge">Merge entries</string>
    <string name="calendar_config_page_bt_replace">Replace entries</string>
    <string name="calendar_config_page_lb_enable_calendar">Sync Calendar</string>
    <string name="calendar_config_page_lb_instructions">Calendar sync will delete all calendar and task entries on your device. Disable all other calendar sync services before you continue.</string>
    <string name="calendar_config_page_lb_pause_calendar">Pause calendar?</string>
    <string name="calendar_config_page_lb_text">Existing calendar data:</string>
    <string name="calendar_config_page_lb_text_calendar_can_be_synced">"This account's calendar can be synced with your device calendar."</string>
    <string name="calendar_config_page_lb_text_merge">Merge the calendar entries from your account with the entries on your phone.</string>
    <string name="calendar_config_page_lb_text_replace">Replace the calendar entries on your phone with the ones from your account. All existing calendar data will be deleted.</string>
    <string name="calendar_config_page_lb_warning">Only one calendar can be synced with your device. Select Next to change the calendar that is synced.</string>
    <string name="calendar_config_page_lb_warning_ok_cancel">Only one calendar can be synced with your device. Select OK to change the calendar that is synced.</string>
    <string name="calendar_config_page_lb_warning_yes_no">Only one calendar can be synced with your device. Select Yes to change the calendar that is synced.</string>
    <string name="calendar_config_page_pt_confirm_change_calendar_sync_account">Calendar from only one account can be synced at any time. Select Next to change the calendar that is synced.</string>
    <string name="calendar_config_page_pt_confirm_change_calendar_sync_account_yes_no">Calendar from only one account can be synced at any time. Select Yes to change the calendar that is synced.</string>
    <string name="calendar_config_page_pt_enable_calendar_title">View your calendar on this device by keeping it in sync.</string>
    <string name="certificate_issue_certificate_unverified">We encountered a problem with the security certificate on this site. To find out more visit {0} and look at the certificate. Do you want to ignore the certificate problem and continue?</string>
    <string name="certificate_issue_mb_title">Certificate Issue</string>
    <string name="opi_creds_page_lb_text_email">Email Address:</string>
    <string name="opi_creds_page_lb_text_password">Password</string>
    <string name="opi_page_lb_account_name">User Name</string>
    <string name="opi_page_lb_incoming_mail_port">Port</string>
    <string name="opi_page_lb_incoming_mail_server">Incoming Mail Server</string>
    <string name="opi_page_lb_outgoing_mail_server">Outgoing SMTP Server</string>
    <string name="opi_page_lb_requires_auth">Requires SMTP Authentication</string>
    <string name="opi_page_lb_same_settings">Same as incoming server</string>
    <string name="opi_page_lb_text">{0} Account Details</string>
    <string name="opi_page_lb_text_smtp_auth">SMTP Authentication</string>
    <string name="opi_page_lb_use_ntlm_auth">Use NTLM Authentication</string>
    <string name="opi_page_lb_use_ssl">Use SSL</string>
    <string name="opi_page_lb_username">User Name</string>
    <string name="other_review_outname">outrname</string>
    <string name="delete_action">Delete</string>
    <string name="forward_action">Forward</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="save_image_action">Save image</string>
    <string name="view_image_action">View image</string>
    <string name="set_as_wallpaper_action">Set as wallpaper</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="add_cc_bcc_action">Add Cc/Bcc</string>
    <string name="remove_cc_bcc_action">Remove Cc/Bcc</string>
    <string name="account_setup_options_mail_window_label">Period to sync email</string>
    <string name="account_settings_title_fmt">General settings</string>
    <string name="account_settings_default_label">Default account</string>
    <string name="account_settings_default_summary">Send email from this account by default</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when email arrives</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_vibrate_when_label">Vibrate</string>
    <string name="account_settings_vibrate_when_summary">Also vibrate when email arrives</string>
    <string name="account_settings_cc_bcc_label">Always Cc/Bcc myself</string>
    <string name="account_settings_cc_bcc_default_summary">Include my email address in Cc/Bcc line</string>
    <string name="account_settings_cc_bcc_dlg_title">Always Cc/Bcc myself</string>
    <string name="account_settings_vibrate_when_dlg_title">Vibrate</string>
    <string name="account_settings_ringtone">Select ringtone</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="save_to_calendar_action">Save in Calendar</string>
    <string name="account_settings_common">Common settings</string>
    <string name="account_settings_forward_with_files_label">Forward with files</string>
    <string name="account_settings_view_mode_label">Split view mode</string>
    <string name="account_settings_signature_label">Signature</string>
    <string name="add_to_contacts_action">Add to Contacts</string>
    <string name="priority">Priority</string>
    <string name="account_settings_sync_contacts_enable">Sync Contacts</string>
    <string name="account_settings_sync_calendar_enable">Sync Calendar</string>
    <string name="account_settings_smime_security_options">Security options</string>
    <string name="sync_schedule_sun">S</string>
    <string name="sync_schedule_mon">M</string>
    <string name="sync_schedule_tue">T</string>
    <string name="sync_schedule_wed">W</string>
    <string name="sync_schedule_thu">T</string>
    <string name="sync_schedule_fri">F</string>
    <string name="sync_schedule_sat">S</string>
    <string name="sync_schedule">Sync schedule</string>
    <string name="while_roaming">While roaming</string>
    <string name="while_power_low">While power is low</string>
    <string name="push_service_common_settings">Push service common settings</string>
    <string name="outgoing_setup_username">User name:</string>
    <string name="setup_password">Password:</string>
    <string name="password_star">**********</string>
    <string name="other_review_sample_id">sample@email.com</string>
    <string name="other_review_username">Username</string>
    <string name="other_review_gpop_in_110">gmail.pop.incoming:110</string>
    <string name="other_review_gpop_out_25">gmail.pop.outgoing:25</string>
    <string name="account_settings_white_mode_label">Background color</string>
    <string name="account_settings_top_line_mode_label">Set top line info</string>
    <string name="account_settings_top_line_mode_summary">Customize subject and sender line</string>
    <string name="account_settings_smime_Tracking_options">Tracking options</string>
    <string name="remove_irm_protection">Remove IRM protection</string>
    <string name="permission">Permission</string>
</resources>