<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/account_settings_title_fmt" android:key="account_settings">
        <EditTextPreference android:maxLines="3" android:singleLine="true" android:maxLength="256" android:title="@string/account_settings_description_label" android:key="account_description" android:summary="" android:order="1" android:dialogTitle="@string/account_settings_description_label" android:inputType="textCapWords" />
        <EditTextPreference android:title="@string/account_settings_signature_label" android:key="account_signature" android:summary="" android:order="2" android:dialogTitle="@string/account_settings_signature_label" android:inputType="textMultiLine" />
        <ListPreference android:entries="@array/days_to_sync_email_entries" android:title="@string/account_setup_options_mail_window_label" android:key="account_amount" android:summary="" android:order="3" android:defaultValue="none" android:dialogTitle="@string/account_setup_options_mail_window_label" android:entryValues="@array/days_to_sync_email_values" />
        <CheckBoxPreference android:title="@string/account_settings_default_label" android:key="account_default" android:summary="@string/account_settings_default_summary" android:order="4" />
        <ListPreference android:entries="@array/account_settings_cc_bcc_entries" android:title="@string/account_settings_cc_bcc_label" android:key="account_settings_cc_bcc" android:summary="@string/account_settings_cc_bcc_default_summary" android:order="5" android:defaultValue="none" android:dialogTitle="@string/account_settings_cc_bcc_dlg_title" android:entryValues="@array/account_settings_cc_bcc_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_notifications">
        <CheckBoxPreference android:title="@string/account_settings_notify_label" android:key="account_notify" android:summary="@string/account_settings_notify_summary" android:defaultValue="true" />
        <com.android.email.activity.setup.RingToneSelectDialog android:title="@string/account_settings_ringtone" android:key="account_ringtone_select" android:summary="@string/account_settings_ringtone" android:dependency="account_notify" />
        <ListPreference android:entries="@array/account_settings_vibrate_when_entries" android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_vibrate_when_label" android:key="account_settings_vibrate_when" android:summary="@string/account_settings_vibrate_when_summary" android:dependency="account_notify" android:defaultValue="never" android:dialogTitle="@string/account_settings_vibrate_when_dlg_title" android:entryValues="@array/account_settings_vibrate_when_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_servers" android:key="account_servers">
        <PreferenceScreen android:title="@string/account_settings_incoming_label" android:key="incoming" />
        <PreferenceScreen android:title="@string/account_settings_sync_contacts_enable" android:key="sync_contacts" />
        <PreferenceScreen android:title="@string/account_settings_sync_calendar_enable" android:key="sync_calendar" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_settings_common" android:key="common_settings">
        <CheckBoxPreference android:title="@string/account_settings_forward_with_files_label" android:key="forward_with_files" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/account_settings_view_mode_label" android:key="view_mode" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/account_settings_white_mode_label" android:key="background_color_mode" />
        <ListPreference android:entries="@array/account_settings_top_line_info_entries" android:layout="?android:preferenceLayoutChild" android:title="@string/account_settings_top_line_mode_label" android:key="top_line_info_mode" android:summary="@string/account_settings_top_line_mode_summary" android:defaultValue="0" android:dialogTitle="@string/account_settings_top_line_mode_label" android:entryValues="@array/account_settings_top_line_info_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/push_service_common_settings">
        <PreferenceScreen android:title="@string/sync_schedule" android:key="sync_schedule" />
        <ListPreference android:entries="@array/use_sync_schedule_entries" android:title="@string/while_roaming" android:key="while_roaming" android:summary="" android:order="2" android:defaultValue="none" android:dialogTitle="@string/while_roaming" android:entryValues="@array/use_sync_schedule_values" />
        <ListPreference android:entries="@array/use_sync_schedule_entries" android:title="@string/while_power_low" android:key="while_power_low" android:summary="" android:order="3" android:defaultValue="none" android:dialogTitle="@string/while_power_low" android:entryValues="@array/use_sync_schedule_values" />
    </PreferenceCategory>
</PreferenceScreen>
