<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/delete" android:title="@string/delete_action" />
    <group android:id="@id/onesend_read">
        <item android:id="@id/reply" android:title="@string/reply_action" />
        <item android:id="@id/forward" android:title="@string/forward_action" />
        <item android:id="@id/mark_as_read" android:title="@string/mark_as_read_action" />
        <item android:id="@id/remove_irm_protection" android:title="@string/remove_irm_protection" />
    </group>
    <group android:id="@id/onesend_unread">
        <item android:id="@id/reply_1" android:title="@string/reply_action" />
        <item android:id="@id/forward_1" android:title="@string/forward_action" />
        <item android:id="@id/mark_as_unread" android:title="@string/mark_as_unread_action" />
        <item android:id="@id/remove_irm_protection_1" android:title="@string/remove_irm_protection" />
    </group>
    <group android:id="@id/manysend_read">
        <item android:id="@id/reply_2" android:title="@string/reply_action" />
        <item android:id="@id/reply_all" android:title="@string/reply_all_action" />
        <item android:id="@id/forward_2" android:title="@string/forward_action" />
        <item android:id="@id/mark_as_read" android:title="@string/mark_as_read_action" />
        <item android:id="@id/remove_irm_protection_2" android:title="@string/remove_irm_protection" />
    </group>
    <group android:id="@id/manysend_unread">
        <item android:id="@id/reply_3" android:title="@string/reply_action" />
        <item android:id="@id/reply_all_1" android:title="@string/reply_all_action" />
        <item android:id="@id/forward_3" android:title="@string/forward_action" />
        <item android:id="@id/mark_as_unread" android:title="@string/mark_as_unread_action" />
        <item android:id="@id/remove_irm_protection_3" android:title="@string/remove_irm_protection" />
    </group>
    <group android:id="@id/image_download">
        <item android:id="@id/save_image_action" android:title="@string/save_image_action" />
        <item android:id="@id/view_image_action" android:title="@string/view_image_action" />
        <item android:id="@id/set_as_wallpaper_action" android:title="@string/set_as_wallpaper_action" />
    </group>
</menu>
