<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/ProvFrameTheme">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/desc" android:padding="3.0dip" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opi_page_lb_text" />
            <LinearLayout android:orientation="horizontal" android:id="@id/to_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/header" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_creds_page_lb_text_email" />
                <TextView android:id="@id/email" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_review_sample_id" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_creds_page_lb_text_password" />
                <TextView android:id="@id/password" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_star" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_username" />
                <TextView android:id="@id/username" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_review_username" />
            </LinearLayout>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_incoming_mail_server" />
            <TextView android:id="@id/incoming_server" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_review_gpop_in_110" />
            <TextView android:id="@id/use_ssl_in" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_use_ssl" />
            <TextView android:id="@id/use_ntlm" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_use_ntlm_auth" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_outgoing_mail_server" />
            <TextView android:id="@id/outgoing_server" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_review_gpop_out_25" />
            <TextView android:id="@id/use_ssl_out" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_use_ssl" />
            <TextView android:id="@id/require_auth" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_requires_auth" />
            <LinearLayout android:orientation="vertical" android:id="@id/auth_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/auth_details" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_text_smtp_auth" />
                <TextView android:id="@id/use_same_settings" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_same_settings" />
                <LinearLayout android:orientation="vertical" android:id="@id/auth_name_password" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_account_name" />
                        <TextView android:id="@id/out_username" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/other_review_outname" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_creds_page_lb_text_password" />
                        <TextView android:id="@id/out_password" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_star" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/account_setup_footer" />
</LinearLayout>
