<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button7" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:text="@string/sync_schedule_sun" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button1" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_mon" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button2" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_tue" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button3" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_wed" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button4" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_thu" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button5" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_fri" />
    <Button android:textSize="23.0sp" android:gravity="center" android:id="@id/add_row_button6" android:background="@drawable/alarm_day_btn_bg" android:paddingLeft="0.0px" android:clickable="true" android:layout_width="98.0px" android:layout_height="98.0px" android:layout_marginLeft="10.0px" android:text="@string/sync_schedule_sat" />
</LinearLayout>
