<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/ProvFrameTheme">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="normal" android:gravity="left" android:autoLink="all" android:id="@id/desc" android:paddingLeft="3.0pt" android:paddingRight="3.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/opi_page_lb_text" style="@style/Font12Color3" />
                <LinearLayout android:orientation="vertical" android:paddingLeft="13.0pt" android:paddingRight="13.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/server_title" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_outgoing_mail_server" />
                    <EditText android:id="@id/server" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" style="@style/Font14Color2" />
                    <TextView android:id="@id/port_title" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_incoming_mail_port" />
                    <EditText android:id="@id/port" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" style="@style/Font14Color2" />
                    <CheckBox android:id="@id/check1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_use_ssl" />
                    <CheckBox android:id="@id/check2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opi_page_lb_requires_auth" />
                    <LinearLayout android:orientation="vertical" android:id="@id/smtp_auth_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:id="@id/auth_desc" android:padding="3.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/authDetails" />
                        <CheckBox android:id="@id/check3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/opi_page_lb_same_settings" />
                        <TextView android:id="@id/username_title" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/outgoing_setup_username" />
                        <EditText android:enabled="false" android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" style="@style/Font14Color2" />
                        <TextView android:id="@id/password_title" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setup_password" />
                        <EditText android:enabled="false" android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:singleLine="true" style="@style/Font14Color2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/account_setup_footer" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
